# NewCaw-po

./: Cawbird.pot  LINGUAS  POTFILES  cs.po  de.po  en_GB.po  en_US.po  fr.po  meson.build
